log
Thu 20 Apr 2023 09:44:21 PM UTC: 
 tests:  1|8
total_score: 0/70
15a8432
Fri 21 Apr 2023 01:10:04 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createTreeMap’:
treemap.c:44:25: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   44 |   tree->lower_than = new->lower_than;
      |                      ~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15653d9
Fri 21 Apr 2023 01:11:04 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|8
total_score: 0/70
dab2c2d
